--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,17 +4,20 @@
     padding: 0;
     margin: 0;
 }
+
 /* Parent body container */
 body {
     background-color: #d9dcd6;
 }
-/* Header parent container*/
+
+/* Header */
 .header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
 }
+
 /* Title of company */
 .header h1 {
     display: inline-block;
@@ -24,6 +27,7 @@ body {
 #seo {
     color: #d9dcd6;
 }
+
 /* Header navigation */
 .header nav {
     padding-top: 15px;
@@ -42,10 +46,12 @@ a {
     color: #ffffff;
     text-decoration: none;
 }
+
 /* Paragraph content */
 p {
     font-size: 16px;
 }
+
 /* Main image */
 #hero {
     height: 800px;
@@ -55,7 +61,8 @@ p {
     background-size: cover;
     background-position: center;
 }
-/* Images in main */
+
+/* Images in main section */
 .float-left {
     float: left;
     margin-right: 25px;
@@ -65,13 +72,34 @@ p {
     float: right;
     margin-left: 25px;
 }
-/* Main Content */
+
+/* Content in main section */
 .content {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
 }
-/* Aside Content*/
+
+/* Main content of offerings*/
+.content-description {
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 300px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #0072bb;
+    color: #ffffff;
+}
+
+.content-description img {
+    max-height: 200px;
+}
+
+.content-description h2 {
+    margin-bottom: 20px;
+    font-size: 36px;
+}
+
+/* Aside section content*/
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -88,30 +116,10 @@ p {
     color: #ffffff;
 }
 
-/* .benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-cost {
-    margin-bottom: 32px;
-    color: #ffffff;
-} */
-
 .benefit-description h3 {
     margin-bottom: 10px;
     text-align: center;
 }
-
-/* .benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-cost h3 {
-    margin-bottom: 10px;
-    text-align: center;
-} */
 
 .benefit-description img {
     display: block;
@@ -119,72 +127,7 @@ p {
     max-width: 150px;
 }
 
-/* .benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-cost img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-} */
-
-.content-description {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-/* .online-reputation-management {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.social-media-marketing {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff; 
-}*/
-
-.content-description img {
-    max-height: 200px;
-}
-/* 
-.online-reputation-management img {
-    max-height: 200px;
-}
-
-.social-media-marketing img {
-    max-height: 200px; 
-} */
-
-.content-description h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-/* .online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.social-media-marketing h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-} */
-
+/* Footer */
 .footer {
     padding: 30px;
     clear: both;
